--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="container">
         <header class="head">
             <h1> Li Weigang </h1>
-		    <p class="subhead">Professor and Director of TransLab at the University of Brasilia, Brazil</p> 
-            <div class="col-lg-12" style="text-align: right;">
-                <button type="button" class="btn"><a href="index.html">Home</a></button>
-            </div>
+		    <p class="subhead">Professor and Director of TransLab at the University of Brasilia, Brazil</p>
+        
+            <p class="menu" style="text-align: right;"><a href="index.html">Home</a></p>
+
         </header>
         <hr width=100% color="#000" size="1px">
         <br>
