--- a/NLP.html
+++ b/NLP.html
@@ -64,10 +64,13 @@
                     <p>ELINAC: Autoencoder Approach for Electronic Invoices Data Clustering, Schulte, Johannes P. ; 
                         Giuntini, Felipe T. ; Nobre, Renato A. ; Nascimento, Khalil C. Do ; Meneguette, Rodolfo I. ; Li, Weigang ; 
                         Gonçalves, Vinícius P. ; Rocha Filho, Geraldo P. ;  Applied Sciences-Basel, v. 12, p. 3008, 2022. </p>
-                
                         
                     <p>SCAN-NF: A CNN-based System for the Classification of Electronic Invoices through Short-text Product Description. Diego S. Kieckbusch, 
                         Geraldo P. R. Filho, Vinicius Di Oliveira, Li Weigang, WEBIST 2021: 501-508.</p>
+
+                    <p><a class = "art" href="https://dblp.org/pid/232/6607.html">Vinicius Di Oliveira</a>, Li Weigang, <a class = "art" href="https://dblp.org/pid/141/9518.html">Geraldo Pereira Rocha Filho</a>:
+                        ELEVEN Data-Set: A Labeled Set of Descriptions of Goods Captured from Brazilian Electronic Invoices.  
+                        Accepted to appear in <a class = "art" href="https://dblp.org/db/conf/webist/webist2021.html#OliveiraC0NF21">WEBIST 2022</a>.</p>
                 </div>
             </section>
         </div>
