--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <a href="reinforcement.html">Reinforcement learning in ATC/ATM</a>;
                         <a href="transportation.html">ITS in urban transportation</a>;
                         <a href="machine.html">Machine learning</a>;
-                        <a href="social.html">Online Social Networks</a> 
+                        <a href="social.html">Online Social Networks</a>;
                         <a href="NLP.html">NLP & Electronic Invoice</a>.
                     </p>
 
